Feature: Cloud Functions para validación de tipos + Sistema de notificaciones - Agrega validateTypeDelete para prevenir eliminación de tipos en uso - Agrega cleanupOldNotifications para limpieza automática - Sistema de notificaciones en tiempo real en UI - Mejora deleteTaskType con validación local y async

--- a/index.html
+++ b/index.html
@@ -121,6 +121,9 @@
             </div>
         </header>
 
+        <!-- Notificaciones -->
+        <div id="notificationsContainer" class="notifications-container"></div>
+
         <main>
             <!-- Botones de acción principal -->
             <section class="action-buttons-section">
